--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -109,6 +109,29 @@
               {%- endif -%}
               <div {{ block.shopify_attributes }}>
                 {%- assign product_form_installment_id = 'product-form-installment-' | append: section.id -%}
+
+                        {% if product.template_suffix == ‘custom’ %}
+
+                          <p class="cart-attribute__field">
+                            <label>Select Size</label><br>
+                            <select required class="required" id="select-size" name="attributes[Select Size]">
+                              <option value="Small"{% if cart.attributes["Select Size"] == "Small" %} selected{% endif %}>Small</option>
+                              <option value="Medium"{% if cart.attributes["Select Size"] == "Medium" %} selected{% endif %}>Medium</option>
+                              <option value="Large"{% if cart.attributes["Select Size"] == "Large" %} selected{% endif %}>Large</option>
+                            </select>
+                          </p>
+
+                          <br>
+
+                          <p class="cart-attribute__field">
+                            <label>Color</label><br>
+                            <input required class="required" type="radio" name="attributes[Color]" value="Black"{% if cart.attributes["Color"] == "Black" %} checked{% endif %}> <span>Black</span><br>
+                            <input required class="required" type="radio" name="attributes[Color]" value="Blue"{% if cart.attributes["Color"] == "Blue" %} checked{% endif %}> <span>Blue</span><br>
+                            <input required class="required" type="radio" name="attributes[Color]" value="Red"{% if cart.attributes["Color"] == "Red" %} checked{% endif %}> <span>Red</span><br>
+                          </p>
+
+                        {% endif %}
+
                 {%- form 'product', product, id: product_form_installment_id, class: 'installment caption-large' -%}
                   <input type="hidden" name="id" value="{{ product.selected_or_first_available_variant.id }}">
                   {{ form | payment_terms }}
