--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -110,33 +110,147 @@
               <div {{ block.shopify_attributes }}>
                 {%- assign product_form_installment_id = 'product-form-installment-' | append: section.id -%}
                 {%- form 'product', product, id: product_form_installment_id, class: 'installment caption-large' -%}
+                    {%- liquid
+                        assign variants_available_arr = product.variants | map: 'available'
+                        assign variants_option1_arr = product.variants | map: 'option1'
+                        assign variants_option2_arr = product.variants | map: 'option2'
+                        assign variants_option3_arr = product.variants | map: 'option3'
 
-                        {% if product.template_suffix == ‘custom’ %}
+                        assign product_form_id = 'product-form-' | append: section.id
+                    -%}
+                        {% if product.template_suffix == 'custom' %}
+                            <p class="cart-attribute__field">
+                            {%- for option in product.options_with_values -%}
+                              {%- liquid
+                                  assign option_disabled = true
 
-                          <p class="cart-attribute__field">
-                            <label>Select Size</label><br>
-                            <select required class="required" id="select-size" name="attributes[Select Size]">
-                              <option value="Small"{% if cart.attributes["Select Size"] == "Small" %} selected{% endif %}>Small</option>
-                              <option value="Medium"{% if cart.attributes["Select Size"] == "Medium" %} selected{% endif %}>Medium</option>
-                              <option value="Large"{% if cart.attributes["Select Size"] == "Large" %} selected{% endif %}>Large</option>
-                            </select>
+                                  for option1_name in variants_option1_arr
+                                    case option.position
+                                      when 1
+                                        if variants_option1_arr[forloop.index0] == value and variants_available_arr[forloop.index0]
+                                          assign option_disabled = false
+                                        endif
+                                      when 2
+                                        if option1_name == product.selected_or_first_available_variant.option1 and variants_option2_arr[forloop.index0] == value and variants_available_arr[forloop.index0]
+                                          assign option_disabled = false
+                                        endif
+                                      when 3
+                                        if option1_name == product.selected_or_first_available_variant.option1 and variants_option2_arr[forloop.index0] == product.selected_or_first_available_variant.option2 and variants_option3_arr[forloop.index0] == value and variants_available_arr[forloop.index0]
+                                          assign option_disabled = false
+                                        endif
+                                    endcase
+                                  endfor
+                                -%} 
+                                    
+                                        {% if option.name == "Size" %}
+                                          
+
+                                        
+                                        
+                                          <variant-selects
+                                          id="variant-selects-{{ section.id }}"
+                                          class="no-js-hidden"
+                                          data-section="{{ section.id }}"
+                                          data-url="{{ product.url }}"
+                                          {% if update_url == false %}
+                                            data-update-url="false"
+                                          {% endif %}
+                                          {{ block.shopify_attributes }}
+                                        >
+                                            <div class="product-form__input product-form__input--dropdown">
+                                            
+                                              <label class="form__label" for="Option-{{ section.id }}-{{ forloop.index0 }}">
+                                                {{ option.name }}
+                                              </label>
+                                              <div class="select">
+                                                <select
+                                                  id="Option-{{ section.id }}"
+                                                  class="select__select"
+                                                  name="options[{{ option.name | escape }}]"
+                                                  form="{{ product_form_id }}"
+                                                >
+                                                {% if option.name == "Size" %}
+                                                {% for value in option.values %}
+                                                  <option
+                                                    value="{{ value | escape }}"
+                                                    {% if option.selected_value == value %}
+                                                      selected="selected"
+                                                    {% endif %}
+                                                  >
+                                                    {% if option_disabled -%}
+                                                      {{- 'products.product.value_unavailable' | t: option_value: value -}}
+                                                    {%- else -%}
+                                                      {{- value -}}
+                                                    {%- endif %}
+                                                  </option>
+                                                  {% endfor %}
+                                                  {% else %}
+                                                  <br>
+                                                  {% endif %}
+                                                </select>
+                                                {% render 'icon-caret' %}
+                                              </div>
+                                            </div>
+
+
+
+
+                                            {% else %}
+                                            
+                                            <label>Color</label>
+
+                                            <fieldset class="js product-form__input">
+                                              {% for value in option.values %}
+                                              {% if option.name == "Color" %}
+                                                          
+                                                          
+                                                          
+                                                          
+                                                          
+                                                          
+                                                          <input 
+                                                        class="no-js-hidden-js product-form__input"
+                                                        type="radio"
+                                                        id="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}"
+                                                        name="{{ option.name }}"
+                                                        value="{{ value | escape }}"
+                                                        form="{{ product_form_id }}"
+                                                        {% if option.selected_value == value %}
+                                                          checked
+                                                        {% endif %}
+                                                        {% if option_disabled %}
+                                                          class="disabled"
+                                                        {% endif %}
+                                                      > 
+                                                            {% if product.variants[forloop.index0].metafields.color.value and option.name == "Color" %}
+                                                                    <label                                                                    
+                                                                    for="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}" style= "background-color: {{ product.variants[forloop.index0].metafields.color.value }}; ">
+                                                                      <span class="visually-hidden">{{ 'products.product.variant_sold_out_or_unavailable' | t }}</span>
+                                                                    </label>  
+                                                            {% endif %} 
+
+
+                                                            
+                                                  {% endif %} 
+                                              {% endfor %}   
+
+                                              </fieldset>
+
+
+                                        {% endif %} 
+
+
+                                {%- endfor -%}
                           </p>
 
-                          <br>
-
-                          <p class="cart-attribute__field">
-                            <label>Color</label><br>
-                            <input required class="required" type="radio" name="attributes[Color]" value="Black"{% if cart.attributes["Color"] == "Black" %} checked{% endif %}> <span>Black</span><br>
-                            <input required class="required" type="radio" name="attributes[Color]" value="Blue"{% if cart.attributes["Color"] == "Blue" %} checked{% endif %}> <span>Blue</span><br>
-                            <input required class="required" type="radio" name="attributes[Color]" value="Red"{% if cart.attributes["Color"] == "Red" %} checked{% endif %}> <span>Red</span><br>
-                          </p>
-
-                        {% endif %}
+                          
+                        {% else %}
 
 
 
                   <input type="hidden" name="id" value="{{ product.selected_or_first_available_variant.id }}">
                   {{ form | payment_terms }}
+                  {% endif %}
                 {%- endform -%}
               </div>
             {%- when 'inventory' -%}
